Modified the package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "signons",
+  "homepage": "https://mahabourada.github.io/signons/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
