--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-scroll-to-top": "^3.0.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
